@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-10T08:09:01Z",
-  "count_outdated" : 261,
-  "uniques_outdated" : 48,
+  "timestamp" : "2022-04-11T16:07:04Z",
+  "count_outdated" : 267,
+  "uniques_outdated" : 49,
   "count" : 283,
   "uniques" : 55,
   "views" : [
-    {
-      "timestamp": "2022-03-28T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 1,
