@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 6,
+  "count": 16,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2022-03-28T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 1,
